<resources>
    <string name="app_name">PID Tuner</string>
    <string name="tvHome">PID<br/>Tuner</string>
    <string name="strWelcome">
        PID Tuner is your go-to tool for precise and efficient PID controller tuningModel.\n\nThe app provides intuitive tools for selecting and applying different tuningModel algorithms based on system characteristics and desired performance.</string>
    <string name="btStart">Start</string>
    <string name="ivPidTunerBackgroundDescription">PID Tuner background image</string>
    <string name="ivPidTunerHelpDescription">PID Tuner help icon. Goes to PID Tuner help page.</string>
    <string name="About">PID Tuner is an application developed to help engineering students to compute controller parameters based on most common methods available, it is only for study purposes.</string>
    <string name="tvTuningMethods">Tuning Methods</string>
    <string name="tvTuningInfo">Select the tuningModel method to obtain the proportional, integral and derivative parameters</string>
    <string name="tvHelp">Help</string>
    <string name="tvCohenCoon" translatable="false">Cohen-Coon</string>
    <string name="tvCohenCoonDesc">The Cohen-Coon method is a popular PID tuningModel technique mainly for first-order systems with time delay. It aims to improve disturbance rejection and has better performance for processes with dead time.</string>
    <string name="cc_about_title">Cohen-Coon (CC) Tuning Method</string>
    <string name="cc_about_description"><Data><![CDATA[
        The Cohen-Coon (CC) tuningModel method is a widely used technique for PID controller tuningModel, particularly for first-order systems with time delay. It provides formulas to calculate the PID parameters based on the system\'s dynamic response.
        <br/><br/>The CC method improves both setpoint tracking and disturbance rejection, making it suitable for systems with significant dead time.
        <br/><br/><b><font color="#CC8D46">Key Characteristics</font></b>
        <br/><br/><b>1. Designed for Dead-Time Systems</b>
        <br/>The CC method is well-suited for systems with a noticeable time delay (dead time), where other tuningModel methods may not perform as effectively.

        <br/><br/><b>2. Balanced Control</b>
        <br/>It offers a balance between quick response and minimal overshoot, making it a good choice for processes that require moderate to fast response times without excessive oscillations.

        <br/><br/><b>3. Setpoint and Disturbance Rejection</b>
        <br/>Cohen-Coon tuningModel can be adjusted for optimizing both setpoint changes and disturbance rejection, improving overall system performance in varying conditions.

        <br/><br/><b><font color="#CC8D46">Tuning Parameters</font></b>:
        <br/><br/>The method calculates PID parameters (proportional gain, integral time, and derivative time) using a process model that considers the system\'s time constant, process gain, and dead time. The formulas are straightforward and applicable to a wide range of industrial processes.
]]> </Data></string>
    <string name="cc_about_link"><Data><![CDATA[For more detailed information about the tuningModel method, visit <a href="https://github.com/rodriguessdeyson/pid-tuner?tab=readme-ov-file#3-cohen-coon-cc">CC Tuning</a>.]]> </Data></string>
    <string name="tvCHR" translatable="false">Chien-Hrones-Reswick</string>
    <string name="tvCHRDesc">This method focuses on optimizing the controller for either setpoint tracking or disturbance rejection. It provides specific tuningModel formulas based on the desired system response, like minimal overshoot or fast response.</string>
    <string name="swIs20UP" translatable="false">20% UP?</string>
    <string name="chr_about_title">Chien-Hrones-Reswick (CHR) Tuning Method</string>
    <string name="chr_about_description"><Data><![CDATA[
        The Chien-Hrones-Reswick (CHR) tuningModel method is a technique designed to optimize PID controller parameters for specific system behaviors, focusing on either setpoint tracking or disturbance rejection.
        <br/><br/>It provides different tuningModel rules based on the desired control objectives, making it adaptable to various performance requirements.
        <br/><br/><b><font color="#CC8D46">Key Characteristics</font></b>
        <br/><br/><b>1. Setpoint Tracking vs. Disturbance Rejection</b>
        <br/>The CHR method offers two tuningModel criteria:

           <br/><br/>- Setpoint Tracking: Prioritizes quick system response to changes in the setpoint (target value).
           <br/><br/>- Disturbance Rejection: Focuses on minimizing the effects of disturbances while maintaining stability.

        <br/><br/><b>2. Minimal Overshoot and Fast Response</b>
        <br/>CHR tuningModel can be adjusted for either minimal overshoot or fast response times, depending on the desired system behavior.

        <br/><br/><b>3. Suitable for Second-Order Systems</b>
        <br/>This method is particularly effective for systems that can be modeled as second-order, providing a balance between stability and performance.

        <br/><br/><b><font color="#CC8D46">Tuning Parameters</font></b>:
        <br/><br/>The CHR method uses formulas to calculate the PID controller gains (proportional, integral, and derivative) based on system dynamics (process gain, time constant, and dead time) and the tuningModel objective (setpoint or disturbance rejection).
]]> </Data></string>
    <string name="chr_about_link"><Data><![CDATA[For more detailed information about the tuningModel method, visit <a href="https://github.com/rodriguessdeyson/pid-tuner?tab=readme-ov-file#2-chien-hrones-and-reswick-chr">CHR Tuning</a>.]]> </Data></string>
    <string name="tvIAE" translatable="false">Integral Absolute Error</string>
    <string name="tvModelTitle">Select the Process Model associate to the desired controller</string>
    <string name="tvModelResult1">Model PI Controller</string>
    <string name="tvModelResult2">Model PID Controller</string>
    <string name="tvModelResult3">Model PID Controller</string>
    <string name="tvModelResult4">Model P Controller</string>
    <string name="tvModelResult5">Model PD Controller</string>
    <string name="imc_about_title">Internal Model Control (IMC) Tuning Method</string>
    <string name="imc_about_description"><Data><![CDATA[
        The Internal Model Control (IMC) tuningModel method is a model-based approach to PID tuningModel, where the controller is designed based on an internal model of the process.
        <br/><br/>The primary goal of IMC is to provide robust and stable control, even in the presence of process uncertainties and disturbances. It is commonly used in industrial applications due to its simplicity and effectiveness.
        <br/><br/><b><font color="#CC8D46">Key Characteristics</font></b>
        <br/><br/><b>1. Model-Based Approach</b>
        <br/>IMC uses a mathematical model of the process to design the controller, assuming that the better the model matches the actual process, the better the control performance will be.

        <br/><br/><b>2. Robust to Process Disturbances and Uncertainties</b>
        <br/>IMC tuningModel provides a controller that is more robust against process disturbances and variations in system parameters, making it highly effective for systems with uncertainties or noise.

        <br/><br/><b>3. Adjustable Performance via Filter</b>
        <br/>IMC tuningModel includes a low-pass filter that can be adjusted to trade off between performance (speed of response) and robustness (stability in the face of disturbances). This allows for flexible tuningModel depending on the desired level of control aggressiveness.

        <br/><br/><b><font color="#CC8D46">Tuning Parameters</font></b>
        <br/><br/>The IMC method calculates the PID parameters based on the process model, which typically includes process gain, time constant, and dead time. The filter time constant is selected to control the trade-off between speed and stability. The resulting PID controller tends to be stable and less aggressive, with smoother control actions.

        <br/><br/><b><font color="#CC8D46">Lambda (λ)</font></b>
        <br/><br/>In Internal Model Control (IMC) tuningModel, the lambda (λ) parameter plays a crucial role in determining the trade-off between system performance and robustness. Lambda is the filter time constant, and it directly affects the tuningModel of the PID controller.

        <br/><br/>In the IMC tuningModel method, after developing a mathematical model of the process (usually a first-order plus dead time, or higher-order model), the PID parameters are calculated using the process model and the λ value.
        <i>The IMC Method in PID Tuner is based on technique proposed by Morari and Zafiriou in \'Robust Process Control\' of PID tunings for first order plus dead time function.</í>
]]> </Data></string>
    <string name="imc_about_link"><Data><![CDATA[For more detailed information about the tuningModel method, visit <a href="https://github.com/rodriguessdeyson/pid-tuner?tab=readme-ov-file#4-internal-model-control-imc">IMC Tuning</a>.]]> </Data></string>
    <string name="tvProcessResults">Results</string>
    <string name="ivFirstOrderFunctionDescription">First order function.</string>
    <string name="Kp" translatable="false">Kp</string>
    <string name="Ki" translatable="false">Ki</string>
    <string name="Kd" translatable="false">Kd</string>
    <string name="tvHelpIntroduction"><Data><![CDATA[
        <b>Welcome to PID Tuner</b>
        <br/><br/>PID Tuner is your go-to tool for precise and efficient PID controller tuningModel. It brings together the most widely-used methods to calculate your controller parameters (Proportional, Integral, and Derivative) based on your process characteristics (Gain, Time Constant, and Dead Time).
        <br/><br/>With PID Tuner, you have access to the following tuningModel methods:<br/>
        <ul>
            <li><b><font color="#CC8D46"> Chien-Hrones-Reswick (CHR)</font></b></li>
            <li><b><font color="#CC8D46"> Cohen-Coon (CC)</font></b></li>
            <li><b><font color="#CC8D46"> Internal Model Control (IMC)</font></b></li>
            <li><b><font color="#CC8D46"> Integral Absolute Error (IAE)</font></b></li>
            <li><b><font color="#CC8D46"> Integral Time Absolute Error (ITAE)</font></b></li>
            <li><b><font color="#CC8D46"> Ziegler-Nichols (Z&N)</font></b></li>
            <li><b><font color="#CC8D46"> Tyreus-Luyben (TL)</font></b></li>
        </ul>
        Each method is tailored to different system behaviors, allowing you to optimize control for stability, responsiveness, or robustness.
        <br/><br/>Follow this guide to compute your PID controller parameters effectively.<br/>
]]> </Data></string>
    <string name="tvHelpDescription"><Data><![CDATA[
        <br/>The equation above represents the first-order system with dead time (Transport Delay), where:
        <ul>
            <li><b><font color="#CC8D46"> Kp (K) is the Process Gain</font></b></li>
            <li><b><font color="#CC8D46"> θ is the Transport Delay</font></b></li>
            <li><b><font color="#CC8D46"> τ is the Process Time Constant</font></b></li>
        </ul>
        <br/>
        PID Tuner only requires Kp, θ, and τ to calculate the controller parameters (Kp, Ki, and Kd) for a PID controller. Note that the IMC Method requires one additional parameter: Lambda (λ).<br/><br/>
]]> </Data></string>
    <string name="tvHelpMoreInformation"><Data><![CDATA[
        For more detailed information about the app and tuningModel methods, visit <a href="https://github.com/rodriguessdeyson/pid-tuner/blob/main/README.md#pid-tuner">PID Tuner</a>.
]]> </Data></string>
</resources>