<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:id="@+id/viewContainer"
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.082" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextViewHelpTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorPrimaryText"
        android:textSize="34sp"
        tools:text="@string/tvHelp" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ScrollViewContainer"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/LinearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewHelpIntroduction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                android:text="@string/tvHelpIntroduction" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/colorAccent" />

            <ImageView
                android:id="@+id/ImageViewFirstOrderFunction"
                android:layout_width="229dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/drawable_formula_background"
                android:contentDescription="@string/ivFirstOrderFunctionDescription"
                android:scaleType="fitCenter"
                android:src="@drawable/first_order_dynamic" />

            <TextView
                android:id="@+id/TextViewHelpDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/tvHelpDescription"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryText"
                android:typeface="normal" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="2dp"
                android:background="@color/colorAccent" />

            <TextView
                android:id="@+id/TextViewHelpKnowMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto"
                android:gravity="center"
                android:text="@string/tvHelpMoreInformation"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorPrimaryText"
                android:typeface="normal" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>