<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorDarkBackground">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/FloatingActionButtonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@color/colorCloseButton"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:srcCompat="@mipmap/ic_close" />

    <TextView
        android:id="@+id/TextViewModelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/tvModelTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/colorText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.055" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="false"
        android:scrollbarThumbVertical="@color/colorAccent"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextViewModelTitle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/ImageButtonModel1"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="45dp"
                android:layout_weight="1"
                android:background="@drawable/border_model"
                android:contentDescription="@string/tvModelResult1"
                android:src="@drawable/model1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tvModelResult1"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/ImageButtonModel2"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_model"
                android:contentDescription="@string/tvModelResult2"
                android:src="@drawable/model2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tvModelResult2"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText" />

            <ImageButton
                android:id="@+id/ImageButtonModel3"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_model"
                android:contentDescription="@string/tvModelResult3"
                android:src="@drawable/model3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tvModelResult3"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText" />

            <ImageButton
                android:id="@+id/ImageButtonModel4"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_model"
                android:contentDescription="@string/tvModelResult4"
                android:src="@drawable/model4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tvModelResult4"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText" />

            <ImageButton
                android:id="@+id/ImageButtonModel5"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:background="@drawable/border_model"
                android:contentDescription="@string/tvModelResult5"
                android:src="@drawable/model5" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tvModelResult5"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorText" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>