<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayoutDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <View
            android:id="@+id/viewContainer"
            android:layout_width="50dp"
            android:layout_height="2dp"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.082" />
    </LinearLayout>

    <TextView
        android:id="@+id/TextViewTuningMethodTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:fontFamily="@font/roboto"
        android:textColor="@color/colorPrimaryText"
        android:textSize="28sp"
        tools:text="@string/imc_about_title" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/ScrollViewContainer"
        android:overScrollMode="never"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="4dp">

        <LinearLayout
            android:id="@+id/LinearLayoutContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TextViewTuningMethodDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                tools:text="@string/imc_about_description" />

            <TextView
                android:id="@+id/TextViewTuningMethodLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/roboto"
                android:textAlignment="viewStart"
                android:textColor="@color/colorPrimaryText"
                android:textSize="16sp"
                tools:text="@string/imc_about_link" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</LinearLayout>